ajustando posição das notas de rodape

--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -1,4 +1,4 @@
-\chapterspecial{Introdução}{}{André Itaparica}\label{introduuxe7uxe3o}
+\chapter{Introdução}{}{André Itaparica}\label{introduuxe7uxe3o}
 
 \hyphenation{Nietz-sche}
 
@@ -33,12 +33,11 @@ Não deixa de ser irônico que posteriormente esse escrito sobre a
 história passaria a ter um reconhecimento por parte da fortuna crítica
 só comparável, entre as primeiras obras de Nietzsche, ao
 \emph{Nascimento da tragédia}. Nos livros clássicos de Karl
-Jaspers\footnote{Jaspers, Karl.
-  \emph{Nietzsche:}~Einführung~in das Verständnis seines
-  Philosophierens. Berlim: Walter de Gruyter, 1936.} e Walter
-Kaufmann\footnote{Kaufmann, Walter.
+Jaspers,\footnote{Jaspers, Karl. \emph{Nietzsche:}~Einführung~in das 
+Verständnis seines Philosophierens. Berlim: Walter de Gruyter, 1936.} 
+e Walter Kaufmann\footnote{Kaufmann, Walter.
   \emph{Nietzsche:}~Philosopher,~Psychologist,
-  Antichrist. Princeton: Princeton University Press, 1950.}, a
+  Antichrist. Princeton: Princeton University Press, 1950.} a
 segunda extemporânea tem um lugar de destaque na discussão sobre a
 filosofia da história de Nietzsche, e Martin Heidegger chegou a conduzir
 um seminário exclusivo sobre ela, em Freiburg, no semestre de inverno de
@@ -92,15 +91,13 @@ Dada a impossibilidade de nos desvencilharmos da história, pois o homem
 sua experiência no mundo), cabe saber até que ponto ela auxilia ou
 prejudica a vida, vista aqui não como um conceito biológico, mas como a
 experiência da vida humana, que só pode ser pensada no interior de uma
-cultura, como bem observaram Martin Heidegger\footnote{
-  Heidegger, Martin. \emph{Zur Auslegung von Nietzsches \versal{II}.}
-  Unzeitgemässer Betrachtung. Frankfurt am Main: Klostermann,
-  2005.}
-e Volker Gerhardt\footnote{``Leben und Geschichte. Menschliches Handeln
-  und historischer Sinn in Nietzsches zweiter `Unzeitgemäßer
-  Betrachtung'''. In: \emph{Pathos und Distanz.} Studien zur
+cultura, como bem observaram Martin Heidegger\footnote{Heidegger, Martin. 
+\emph{Zur Auslegung von Nietzsches \versal{II}.} Unzeitgemässer Betrachtung. 
+Frankfurt am Main: Klostermann, 2005.} e Volker Gerhardt.\footnote{``Leben 
+und Geschichte. Menschliches Handeln und historischer Sinn in Nietzsches zweiter 
+`Unzeitgemäßer Betrachtung'''. In: \emph{Pathos und Distanz.} Studien zur
   Philosophie Friedrich Nietzsches. Stuttgart: Reclam-Verlag, 1988,
-  133--162.}. Vemos, assim, que há um contexto filosófico e
+  133--162.} Vemos, assim, que há um contexto filosófico e
 antropológico vasto e profundo nessa compreensão da história. Do mesmo
 modo, a crítica de Nietzsche ao fazer histórico de sua época não se
 reduz à disciplina histórica, nem às correntes filológicas de sua
