--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -4,7 +4,7 @@
 
 
 
-\chapterspecial{Prefácio}{}{}\label{prefuxe1cio}
+\chapter{Prefácio}{}{}\label{prefuxe1cio}
 
 ``Aliás,\footnote{Esta tradução baseia-se na edição crítica
   Colli-Montinari. \emph{Sämtliche Werke.} Kritische Studienausgabe. Bd.
@@ -23,10 +23,10 @@
 aumentar ou estimular diretamente minha ação''.\footnote{\emph{Carta de Goethe
   a Schiller,} de 19/12/1798. Nessa passagem, Goethe faz um comentário
   sobre a \emph{Antropologia} de Kant.} Com essas palavras de Goethe,
-que expressam um resoluto \emph{ceterum censeo}\footnote{Palavras com
+que expressam um resoluto \emph{ceterum censeo},\footnote{Palavras com
   que Catão, o Velho, finalizava seus discursos durante as Guerras
   Púnicas: ``\emph{Aliás, sou da opinião} de que Cartago deve ser
-  destruída''.}, pode ter início nossa consideração sobre o valor e
+  destruída''.} pode ter início nossa consideração sobre o valor e
 desvalor da história. Nela se mostra por que o ensinamento sem vivência,
 por que o saber que entorpece a ação, por que a história como fútil
 excesso de conhecimento e luxo devem, nas palavras de Goethe, ser odiados
@@ -275,9 +275,9 @@ Se alguém pudesse estar em condições, em diversos casos, de inalar e
 respirar essa atmosfera aistórica, na qual todo evento histórico
 grandioso surge, esse alguém poderia talvez, enquanto um ser que
 conhece, elevar-se a um ponto de vista \emph{supra-histórico}, tal como
-o descreveu Niebuhr\footnote{Barthold G. Niebuhr (1776--1831),
+o descreveu Niebuhr,\footnote{Barthold G. Niebuhr (1776--1831),
   historiador prussiano. Até o momento não se identificou a fonte da
-  citação que Nietzsche faz a seguir.}, como resultado possível da
+  citação que Nietzsche faz a seguir.} como resultado possível da
 consideração histórica. Diz ele: ``Entendida de maneira clara e precisa,
 a história é útil ao menos para uma coisa -- para que se saiba como também
 os maiores e superiores espíritos da espécie humana não sabem quão
@@ -415,8 +415,8 @@ grande luta, que precisa de modelos, mestres, consoladores, não logrando
 encontrá-los entre seus contemporâneos e no presente. Assim era com
 Schiller: pois nossa época é tão ruim, disse Goethe, que o poeta não
 encontra, entre os homens a sua volta, nenhuma natureza
-aproveitável\footnote{Cf. Goethe. \emph{Conversações com Eckermann}.
-  Entrada datada de 21/07/1827.}. Políbio, por exemplo, tendo em vista o
+aproveitável.\footnote{Cf. Goethe. \emph{Conversações com Eckermann}.
+  Entrada datada de 21/07/1827.} Políbio, por exemplo, tendo em vista o
 homem de ação, chama a história política de justa preparação para o
 governo de um Estado e mestra suprema, por meio da qual a lembrança
 dos infortúnios alheios nos orienta a suportar altivamente os revezes da
@@ -642,9 +642,9 @@ entendimento ágil do palimpsesto, até mesmo do \emph{polipsesto}\footnote{Neol
   sentido seja o de um pergaminho cujo manuscrito foi apagado e
   reutilizado muitas vezes.} -- estes são seus talentos e virtudes. Com
 eles, Goethe quedou-se diante do monumento de Erwin von
-Steinbach\footnote{Arquiteto alemão que construiu a catedral de
+Steinbach;\footnote{Arquiteto alemão que construiu a catedral de
   Estrasburgo. Na passagem seguinte, Nietzsche faz alusão ao ensaio de
-  ``Von deutscher Baukunst'' (Sobre a arquitetura alemã), de Goethe.};
+  ``Von deutscher Baukunst'' (Sobre a arquitetura alemã), de Goethe.}
 na tempestade de seu sentimento rasgou o véu nebuloso que a história
 estendeu entre eles: ele viu, pela primeira vez, a obra alemã
 ``realizar-se, provinda da forte e rouca alma alemã''. Tal sentido e
@@ -825,7 +825,7 @@ tornará uma primeira.
     assistiu a esse espetáculo de forma tão explícita como a ciência do
     devir universal, a história, hoje o apresenta; certamente ela o
     apresenta com a perigosa temeridade de seu lema: \emph{Fiat veritas
-    pereat vita.}\footnote{Que a verdade se realize e que o mundo pereça.}
+    pereat vita}.\footnote{Que a verdade se realize e que o mundo pereça.}
 
     Imaginemos agora o processo mental presente na alma do homem
     moderno. O saber histórico flui, continuamente e em diversas
@@ -970,8 +970,8 @@ tornará uma primeira.
     desprezível restasse como marca do alemão. Quase tão terrível quanto
     aquela interioridade ali sentasse, sem poder ser vista, falsificada,
     colorida, pintada, fazendo as vezes de atriz, quando não coisa pior:
-    como parece concordar, por exemplo, Grillparzer\footnote{Franz
-      Grillparzer (1791--1872), poeta e dramaturgo austríaco.}, que
+    como parece concordar, por exemplo, Grillparzer,\footnote{Franz
+      Grillparzer (1791--1872), poeta e dramaturgo austríaco.} que
     observa, de modo marginal e discreto, a partir de sua experiência
     dramático-teatral: ``Nós sentimos com abstrações'', diz ele, 
     ``não mais sabemos como nossos contemporâneos expressam seus sentimentos; 
@@ -1417,7 +1417,7 @@ são submetidos ao silencioso e nem sempre percebido, mas violento e
 ininterrupto curso das coisas?'' Em tal frase se percebe tanto uma
 verdade enigmática quanto uma inverdade patente; como o dito do
 jardineiro goethiano: ``a natureza se deixa forçar, mas não se
-coagir''\footnote{\emph{Carta de Goethe a Schiller,} de 21/02/1798.}, ou na
+coagir'',\footnote{\emph{Carta de Goethe a Schiller,} de 21/02/1798.} ou na
 inscrição de uma barraca de quermesse, contada por Swift: ``Aqui se
 encontra, com exceção de si mesmo, o maior elefante do mundo''. Qual é,
 contudo, a oposição entre ação e impulso humanos e o curso das coisas?
@@ -1432,8 +1432,8 @@ mesmo trivial; pois ocorre a todos na pequena esfera da experiência. Por
 isso, o incômodo de povos inteiros e anos de trabalho exaustivo nada
 significaram, nas ciências naturais, senão o acúmulo de experimento
 atrás de experimento, muito depois que a lei foi deduzida do tesouro da
-experiência; aliás, segundo Zöllner\footnote{Johann Karl Friedrich
-  Zöllner (1834--82), astrônomo e físico alemão.}, a ciência natural
+experiência; aliás, segundo Zöllner,\footnote{Johann Karl Friedrich
+  Zöllner (1834--82), astrônomo e físico alemão.} a ciência natural
 atual padece dessa absurda desmesura do experimento. Se o valor de um
 drama residisse no desfecho e nas ideias principais, o próprio drama
 seria possivelmente um caminho longo e sinuoso em direção a um fim; e,
@@ -1498,9 +1498,9 @@ examinam pela certeza de que eles não podem tornar-se grandes
 historiadores; muito menos confundi-los com estes últimos, mas
 compreendê-los como aprendizes e ajudantes braçais a serviço do mestre,
 assim como os franceses, com mais ingenuidade do que os alemães,
-costumam falar dos \emph{historiens de} M. Thiers\footnote{Lous A.
+costumam falar dos \emph{historiens de} M. Thiers.\footnote{Lous A.
   Thiers (1797--1877), historiador francês. O sentido da expressão em
-  francês é: ``os historiadores que trabalham para M. Thiers''.}. Esses
+  francês é: ``os historiadores que trabalham para M. Thiers''.} Esses
 trabalhadores braçais devem paulatinamente tornar-se eruditos, mas por
 isso nunca poderão ser mestres. Um grande erudito e um grande cabeça-oca
 -- duas coisas que combinam.
@@ -1580,7 +1580,7 @@ diferenciando a ``Ideia do cristianismo'' de suas múltiplas e
 imperfeitas formas de manifestação e convencendo como a ``paixão'' da
 Ideia se revela de forma cada vez mais pura, transparente e até pouco
 visível aos cérebros dos atuais \emph{theologus liberalis
-vulgaris}\footnote{Teólogo liberal comum.}. Se ouvir o que esses
+vulgaris}.\footnote{Teólogo liberal comum.} Se ouvir o que esses
 cristianismos puríssimos têm a falar dos antigos cristianismos impuros,
 um ouvido imparcial terá a impressão de que o assunto não é o
 cristianismo, mas o que devemos pensar disso? Quando vemos o
@@ -1776,8 +1776,8 @@ crença cristã reserva não para o homem mas para ``o filho do homem''? Em
 outras épocas, esse evocativo \emph{memento mori}\footnote{Lembra que
   morrerás.} foi sempre um espinho torturante e igualmente o ápice da
 ciência e da consciência medieval. Para ser franco, o chamado contrário
-de nossa época, \emph{memento} \emph{vivere}\footnote{Lembra que
-  viverás.}\emph{,} ainda ressoa de forma bem acanhada, não sai a plenos
+de nossa época, \emph{memento} \emph{vivere},\footnote{Lembra que
+  viverás.} ainda ressoa de forma bem acanhada, não sai a plenos
 pulmões e tem algo de quase desonesto. Pois a humanidade ainda repousa
 no \emph{memento mori} e revela isso por meio da necessidade histórica
 universal: o saber não pôde, apesar da força de suas asas, levantar voo,
@@ -1793,7 +1793,7 @@ esperanças: só contra a vontade ela deixa que o devir a estimule e, no
 momento certo, o desconsidera e o sacrifica, como uma sedução para a
 existência, como uma mentira a respeito da vida. Aquilo que os
 florentinos faziam, quando eles, impressionados com os sermões de
-Savonarola\footnote{Girolamo Savonarola (1452--98), frade italiano.},
+Savonarola,\footnote{Girolamo Savonarola (1452--98), frade italiano.} 
 patrocinaram aquelas célebres fogueiras sacrificais, queimando quadros,
 manuscritos, espelhos e máscaras, o cristianismo podia fazer com
 qualquer cultura que estimula a perseverança e toma o \emph{memento
@@ -1835,8 +1835,8 @@ afirmativo da vida e original. Ou deve ser verdade que nós alemães --
 deixando os povos românicos fora do jogo -- temos de ser, nas questões
 superiores da cultura, sempre tardios, porque só isso \emph{podemos}
 ser, como expressa essa instigante frase de Wilhelm
-Wackernagel\footnote{Wilhelm Wackernagel (1806--69), filólogo alemão.
-  Citação da obra \emph{Ensaios sobre a história literária alemã}.}:
+Wackernagel:\footnote{Wilhelm Wackernagel (1806--69), filólogo alemão.
+  Citação da obra \emph{Ensaios sobre a história literária alemã}.}
 
 \begin{quote}
 Nós, alemães, somos um povo de descendentes, somos sempre, com todo o
@@ -2216,8 +2216,8 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     concordar, com a maioria, na forma que propôs, que no próximo
     sábado, pontualmente à meia-noite, seu mundo se aniquilará, e nosso
     decreto poderá rezar: a partir de amanhã cessará o tempo e os
-    jornais não serão lançados\footnote{Não mantivemos o jogo entre
-      \emph{Zeit} (tempo) e \emph{Zeitung} (jornal).}. Mas talvez não
+    jornais não serão lançados.\footnote{Não mantivemos o jogo entre
+      \emph{Zeit} (tempo) e \emph{Zeitung} (jornal).} Mas talvez não
     faça efeito e decretamos em vão: pois, em todo caso, não nos falta
     tempo para um belo experimento. Peguemos uma balança e coloquemos,
     em um prato, o inconsciente de Hartmann; no outro, o processo do
@@ -2243,8 +2243,8 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     mesmo um fim, um objetivo, um ``para quê'', um ``para quê'' elevado
     e nobre. Pereça por ele -- não conheço melhor finalidade da vida do
     que perecer na busca do grande e impossível, \emph{animae magna
-    prodigus}\footnote{``Pródigo de grande alma''\textbf{.} Expressão de
-      Horácio, \emph{Odes \versal{I}}, significando ``sem cuidado com a vida''.}. Se, ao
+    prodigus}.\footnote{``Pródigo de grande alma''\textbf{.} Expressão de
+      Horácio, \emph{Odes \versal{I}}, significando ``sem cuidado com a vida''.} Se, ao
     contrário, as doutrinas do devir soberano, da fluidez de todos os
     conceitos, tipos e espécies, da ausência de toda diferença cardinal
     entre homem e animal, doutrinas que tomo por verdadeiras mas letais
@@ -2425,8 +2425,8 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     intensamente sobre a ``poesia'', mas com palavras, palavras e
     palavras. Aquele despertar de uma palavra para vida não foi
     igualmente a morte dos seus criadores, em certo sentido eles ainda
-    vivem; pois quando, como disse Gibbon\footnote{Edward Gibbon
-      (1737--94), historiador inglês.}, é preciso muito tempo para que um
+    vivem; pois quando, como disse Gibbon,\footnote{Edward Gibbon
+      (1737--94), historiador inglês.} é preciso muito tempo para que um
     mundo decline, do mesmo modo é preciso muito tempo para que, na
     Alemanha, ``a terra do processo paulatino'', um falso conceito
     decline. Pelo menos talvez haja centenas de homens, distantes há
@@ -2510,10 +2510,10 @@ Neste momento, pensando na \emph{juventude}, eu brado: terra à
     educação e portanto do novo Estado. -- Assim também o alemão moderno
     acredita na \emph{aeterna veritas} de sua educação: e contudo essa
     crença ruirá, como ruiria o Estado platônico, quando a essa mentira
-    necessária se opuser uma \emph{verdade necessária}\footnote{Jogo de
+    necessária se opuser uma \emph{verdade necessária}:\footnote{Jogo de
       palavras entre \emph{Notlüge} (uma mentira que procura acalentar
       ou prevenir do pior, em uma situação de emergência) com o que
-      seria seu antônimo, o neologismo \emph{Notwahrheit}.}: que o
+      seria seu antônimo, o neologismo \emph{Notwahrheit}.} que o
     alemão não possui cultura alguma, porque ele, graças a sua educação,
     não pode ter cultura alguma. Ele quer a flor sem caule e raiz:
     portanto a quer em vão. Essa é a simples verdade, uma justa verdade
