--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -10,28 +10,26 @@ Basileia e passa a frequentar mais a casa de Wagner. Em
 1879, devido a constantes recaídas, deixa a universidade e passa a 
 receber uma renda anual. A partir daí assume uma vida errante, 
 dedicando-se exclusivamente à reflexão e à redação de suas obras, 
-dentre as quais se destacam: \textit{O nascimento da tragédia} (1872), \textit{Considerações Extemporâneas} (1873--1874), 
-\textit{Assim falava Zaratustra} (1883--1885), \textit{Para além do bem e mal} (1886), 
-\textit{A genealogia da moral} (1887) e \textit{O anticristo} (1895). Em 1889, 
-apresenta os primeiros sintomas de problemas mentais, provavelmente 
-decorrentes de sífilis. Falece em 1900.
+dentre as quais se destacam: \textit{O nascimento da tragédia} (1872), 
+\textit{Considerações Extemporâneas} (1873--1874), \textit{Assim falava Zaratustra} 
+(1883--1885), \textit{Para além do bem e mal} (1886), \textit{A genealogia da moral} 
+(1887) e \textit{O anticristo} (1895). Em 1889, apresenta os primeiros 
+sintomas de problemas mentais, provavelmente decorrentes de sífilis. Falece em 1900.
 
 
 \textbf{Publicada em 1874}, a segunda das quatro considerações extemporâneas,
 \textit{Sobre a utilidade e a desvantagem da história para a vida}, foi definida pelo autor, 
-em sua autobiografia, \textit{Ecce Homo}, como sendo o tratado que: ``traz à luz o que há de perigoso, corrosivo e
-envenenador da vida na nossa forma de prática científica: a vida
+em sua autobiografia, \textit{Ecce Homo}, como sendo o tratado que: ``traz à luz o que há 
+de perigoso, corrosivo e envenenador da vida na nossa forma de prática científica: a vida
 \emph{doente} dessa engrenagem e mecanismo desumanos, da
-`\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão
-do trabalho'''. Nessa obra, ``o `sentido histórico', do
-qual nosso século se orgulha, foi pela primeira vez reconhecido como
-doença, como signo típico da decadência''. 
+`\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão do trabalho'''. 
+Nessa obra, ``o `sentido histórico', do qual nosso século se orgulha, foi pela primeira 
+vez reconhecido como doença, como signo típico da decadência''. 
 
 
-\textbf{André Luis Mota Itaparica} é doutor em filosofia pela Universidade 
-de São Paulo (\textsc{usp}) e professor 
-da Universidade Federal do Recôncavo da Bahia 
-(\textsc{ufrb}). É autor de 
-\textit{Nietzsche: Estilo e moral} (Discurso/Unijuí, 2001),  
-\textit{Verdade e linguagem em Nietzsche} (Edufba, 2014), numerosos artigos e contribuições a obras sobre Nietzsche, Crítica da Moral, Idealismo, Realismo, Natureza, Cultura etc.
+\textbf{André Luis Mota Itaparica} é doutor em filosofia pela Universidade  
+de São Paulo (\textsc{usp}) e professor da Universidade Federal do Recôncavo da Bahia 
+(\textsc{ufrb}). É autor de \textit{Nietzsche: Estilo e moral} (Discurso/Unijuí, 2001),  
+\textit{Verdade e linguagem em Nietzsche} (Edufba, 2014), numerosos artigos e contribuições 
+a obras sobre Nietzsche, Crítica da Moral, Idealismo, Realismo, Natureza, Cultura etc.
 
