--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -25,7 +25,7 @@ envenenador da vida na nossa forma de prática científica: a vida
 \emph{doente} dessa engrenagem e mecanismo desumanos, da
 `\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão
 do trabalho'. Perde-se o fim, a cultura: -- o meio, a moderna prática
-científica, \emph{barbariza}... Nesse tratado o `sentido histórico', do
+científica, \emph{barbariza}\ldots{} Nesse tratado o `sentido histórico', do
 qual nosso século se orgulha, foi pela primeira vez reconhecido como
 doença, como signo típico da decadência''.\footnote{Nietzsche, F.
   \emph{Ecce homo.} Berlim/Munique: Walter de Gruyter, 1988, p. 316.}
@@ -199,7 +199,7 @@ celestes, as mesmas coisas deveriam repetir-se também na Terra, nos
 mínimos detalhes, de tal modo que sempre que as estrelas estiverem numa
 certa posição em relação às outras um estoico e um epicurista se aliarão
 e assassinarão César e, num outro arranjo, Colombo novamente descobrirá
-a América (...). Provavelmente isso não acontecerá até que os astrônomos
+a América (\ldots{}). Provavelmente isso não acontecerá até que os astrônomos
 voltem a ser astrólogos''.
 
 No caso da história antiquária, o respeito ao passado representa uma
@@ -396,9 +396,9 @@ séculos em que os gregos se encontravam no mesmo perigo em que nos
 encontramos, ou seja, de sucumbir na inundação do estrangeiro e do
 passado, na `história'. Eles nunca viveram numa intangibilidade
 orgulhosa: sua `cultura', ao contrário, foi sempre, por muito tempo, um
-caos de formas e conceitos estrangeiros (...): semelhante a como hoje a
+caos de formas e conceitos estrangeiros (\ldots{}): semelhante a como hoje a
 `cultura alemã' e a religião são em si um caos de toda terra
-estrangeira, de toda época anterior. (...) Os gregos aprenderam aos
+estrangeira, de toda época anterior. (\ldots{}) Os gregos aprenderam aos
 poucos a \emph{organizar o caos} ao se voltarem, segundo o ensinamento
 délfico, a refletir sobre si, isto é, sobre suas necessidades autênticas
 e deixar perecer as necessidades ilusórias'' (p.\,\pageref{necessidadesilusorias}).
