--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -96,7 +96,7 @@ silencia, e o homem se espanta.\footnote{Passagem inspirada no poema
   livre/ De quase toda dor/ Labuta, perda, o pior temor são esquecidos no
   instante/ Mais ainda porque o fastio nunca te tortura!/ Quando tu
   escolhes, na grama e na sombra, onde cochilar, e te sentes feliz.
-  (...) Se tu soubesses falar, te perguntaria:/ Diz-me, por que o
+  (\ldots{}) Se tu soubesses falar, te perguntaria:/ Diz-me, por que o
   animal,/ No descanso, na indolência,/ Tem alegria, enquanto eu me
   enfastio/ Assim que descanso?''. Tradução baseada na alemã de
   Robert Hamerling (\emph{Leopardi's Gedichte}. Hildburghausen, 1866),
