--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -24,7 +24,7 @@ que são exaltadas, a segunda ganha elogiosas, mas parcas linhas: ``A
 envenenador da vida na nossa forma de prática científica: a vida
 \emph{doente} dessa engrenagem e mecanismo desumanos, da
 `\emph{im}pessoalidade' do trabalhador, da falsa economia da `divisão
-do trabalho'. Perde-se o fim, a cultura: -- o meio, a moderna prática
+do trabalho'. Perde-se o fim, a cultura: --- o meio, a moderna prática
 científica, \emph{barbariza}\ldots{} Nesse tratado o `sentido histórico', do
 qual nosso século se orgulha, foi pela primeira vez reconhecido como
 doença, como signo típico da decadência''.\footnote{Nietzsche, F.
@@ -58,22 +58,22 @@ apresentando uma definição lapidar do que ele entende por
 extemporaneidade: ``Para tanto, permito-me confessar, até pela minha
 profissão de filólogo clássico: não saberia que sentido teria a
 filologia clássica em nossos dias senão o de intervir extemporaneamente
--- isto é, contra a época, sobre a época e a favor de uma época
+--- isto é, contra a época, sobre a época e a favor de uma época
 futura'' (p.\,\pageref{epocafutura}).
 
 Se sua natureza aguerrida e sua prosa ao mesmo tempo poética e aguda são
 fáceis de perceber, o mesmo não se pode dizer do tema e das teses do
 livro, assunto sobre o qual seus leitores dificilmente chegam a um
 acordo. Apesar de em seu título constar a palavra de origem latina
-\emph{Historie} -- e não o termo de origem germânica \emph{Geschichte}
---, o que conotaria um estudo exclusivo sobre uma disciplina acadêmica,
+\emph{Historie} --- e não o termo de origem germânica \emph{Geschichte}
+---, o que conotaria um estudo exclusivo sobre uma disciplina acadêmica,
 a historiografia, sua discussão não se limita a essa fronteira.
 Nietzsche debate sobretudo as consequências culturais da espécie de
 relação com a história que é fomentada por uma época. Não se trata,
 também, como muito se pensou e sua própria narrativa em \emph{Ecce homo}
 pode nos levar a crer, de uma avaliação unicamente negativa da cultura
-histórica, pois para ele há também uma forma afirmativa -- e mesmo
-inelutável para o homem -- de se relacionar com a história: por meio do
+histórica, pois para ele há também uma forma afirmativa --- e mesmo
+inelutável para o homem --- de se relacionar com a história: por meio do
 tempo vivido e da memória. Nesse aspecto, vemos como a crítica cultural
 e a reflexão filosófica sobre a temporalidade se encontram neste livro
 de forma imprevista e surpreendente.
@@ -140,7 +140,7 @@ com a história. Para a história servir à vida é necessário que haja um
 equilíbrio entre o caráter histórico da memória e o caráter aistórico do
 esquecimento: ``\emph{o histórico e o aistórico são igualmente
 necessários para a saúde de um indivíduo, de um povo e de uma
-cultura}''\emph{.}
+cultura}''.
 
 Além do histórico e do aistórico, há ainda uma terceira forma de se
 relacionar com o passado, o ponto de vista supra-histórico: uma visão
@@ -162,7 +162,7 @@ ofertar ao futuro. A prática histórica, como um jogo entre esses pontos
 de vista, não pode seguir o modelo de uma ciência pura, como queriam os
 positivistas, mas constituir-se num exercício comungado com uma forma de
 vida e com um traço de caráter individual, o que determinará as três
-espécies possíveis de história -- monumental, antiquária e crítica --
+espécies possíveis de história --- monumental, antiquária e crítica ---
 que serão apresentadas nos segundo e terceiro capítulos da obra.
 
 A discussão sobre as três espécies de história possui inegável apelo,
