--- a/TEXTO-ORIGINAL.tex
+++ b/TEXTO-ORIGINAL.tex
@@ -16,7 +16,7 @@
   Press, 1997; \emph{Segunda consideração intempestiva}. Da
   utilidade e desvantagem da história para a vida. Trad. Marco
   Antônio Casanova. Rio de Janeiro:
-  Relume Dumará, 2003; \emph{Considérations inactuelles \versal{I} et \versal{II}}. Trad.
+  Relume Dumará, 2003; \emph{Considérations inactuelles \textsc{i} et \textsc{ii}}. Trad.
   Pierre Rusch. Paris: Gallimard, 1990. Para as notas do tradutor, foram
   úteis o aparato crítico da edição Colli-Montinari (Bd. 14) e as notas
   das edições mencionadas.} odeio tudo aquilo que apenas me instrui, sem
@@ -120,7 +120,7 @@ presente, como um número, sem restar uma estranha fração;\footnote{Erwin
   e cheios de vida, que compreendiam muito bem que a soma de nossa
   existência, dividida pela razão, nunca é exata, restando sempre uma
   estranha fração'' (\emph{Os anos de aprendizado de Wilhelm Meister,}
-  Livro 4. Rio de Janeiro: Ed. 34, 2006, p. 266).} ele não sabe
+  Livro 4. Rio de Janeiro: Ed. 34, 2006, p.\,266).} ele não sabe
 dissimular, nada esconde e aparece em cada momento inteiramente como
 aquilo que é; ele não sabe ser outra coisa senão sincero. O homem, ao
 contrário, luta contra a crescente e pesada carga do passado: esta o
@@ -163,7 +163,7 @@ mais no seu próprio ser, não acredita mais em si, vendo tudo fluir de um
 ponto móvel a outro e se perdendo nessa correnteza do devir; por fim,
 como o íntegro discípulo de Heráclito, ele quase sequer ousará apontar o
 dedo.\footnote{O discípulo de Heráclito em questão é Crátilo. (Cf. Livro
-  \versal{IV} da \emph{Metafísica} de Aristóteles).} A toda ação pertence o
+  \textsc{iv} da \emph{Metafísica} de Aristóteles).} A toda ação pertence o
 esquecimento: assim como pertence à vida de todo organismo não somente a
 luz, mas também a escuridão. Um homem que sentisse tudo unicamente de
 forma histórica seria parecido com alguém que tivesse abdicado do sono,
@@ -261,7 +261,7 @@ de Goethe, é inescrupuloso, ele também é leviano;\footnote{Nietzsche se refer
   inescrupuloso; ninguém possui mais consciência que o homem
   contemplativo (\emph{Betrachtende}).'' (``Maximen und Reflexionen''.
   In: \emph{Gesammelte Werke}, Herausgegeben von Erwin Laaths, Bd. 6,
-  p. 281). Düsseldorf: Deutscher Bücherbund, 1952. Não foi possível
+  p.\,281). Düsseldorf: Deutscher Bücherbund, 1952. Não foi possível
   manter o jogo de palavras entre inescrupuloso (\emph{gewissenlos}) e
   leviano (\emph{wissenlos}).} para realizar algo
 ele esquece a maioria das coisas, ele é injusto com aquilo que repousa
@@ -291,7 +291,7 @@ que o defende, nada que o seduza a continuar vivendo e a participar da
 história, pois ele reconheceria a condição única de todo evento, aquela
 cegueira e injustiça na alma de quem age. Ele mesmo evitaria levar a
 história demasiadamente a sério: ele teria aprendido, em toda
-experiência, entre gregos ou turcos, seja no século \versal{I} ou no século \versal{XIX},
+experiência, entre gregos ou turcos, seja no século \textsc{i} ou no século \textsc{xix},
 a responder à questão de como e para que se viveu. Quem perguntar a
 conhecidos se eles desejariam viver novamente os últimos dez ou vinte
 anos, perceberá facilmente qual deles está cultivado para aquele ponto
@@ -309,7 +309,7 @@ Aquilo que o primeiro gole de vigor\qb{} não pôde dar.\footnote{Segundo
   Walter Kaufmann (\emph{Nietzsche} --- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
   citação da peça ``Aureng-zebe'', de John Dryden, incluída no
-  \emph{Diálogo sobre a religião natural,} de Hume. No original consta
+  \emph{Diálogo sobre a religião natural}, de Hume. No original consta
   ``pensam'' em vez de ``esperam''.}
 \end{verse}
 \end{quote}
@@ -542,7 +542,7 @@ terrível e interminável, da qual emergem, como ilhas, apenas alguns
 fatos embelezados: para algumas pessoas de boa visão, salta aos olhos
 algo de antinatural e sobrenatural, como a coxa dourada com que os
 discípulos de Pitágoras diziam reconhecer seu mestre.\footnote{Anedota
-  presente no livro \versal{VIII} de \emph{Vida e opiniões dos mais eminentes
+  presente no livro \textsc{viii} de \emph{Vida e opiniões dos mais eminentes
   filósofos}, de Diógenes Laércio.} A história monumental ilude por
 meio de analogias: com semelhanças sedutoras, ela estimula os corajosos
 à temeridade, os entusiastas ao fanatismo; e se pensarmos essa história
@@ -622,7 +622,7 @@ por sua existência. Cuidando com zelo do que é antigo e permanente, quer prese
  as condições sob as quais surgiu e outros deverão
 surgir depois dele --- e assim ele serve à vida. Em tal espírito, a posse
 dos utensílios ancestrais\footnote{Referência ao \emph{Fausto}, de
-  Goethe, \versal{I}, linha 408.} modifica suas ideias: ele passa a ser por eles
+  Goethe, \textsc{i}, linha 408.} modifica suas ideias: ele passa a ser por eles
 possuído. O que é pequeno, estreito, podre e envelhecido adquire honra
 pelo fato de que a alma conservadora e reverente do homem antiquário se
 transmigra para essas coisas e constrói para si um ninho oculto. A
@@ -1570,7 +1570,7 @@ contra a própria vontade, estão a serviço do \emph{écrasez}
 voltairiano.\footnote{Referência ao ``destruam a infame'', ou seja, a
   Igreja.} Ninguém supunha atrás disso um instinto construtor forte;
 poder-se-ia então considerar a dita União Protestante\footnote{Instituição
-  alemã, fundada no século \versal{XIX}, que unia diversos segmentos da igreja
+  alemã, fundada no século \textsc{xix}, que unia diversos segmentos da igreja
   reformada.} como o útero de uma nova religião, e um jurista como
 Holtzendorf\footnote{Franz von Holtzendorf (1829--89), jurista alemão.}
 (como editor e prefaciador da dita Bíblia protestante), o João do Rio
@@ -2044,7 +2044,7 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     conhecimento; parece berrar para a natureza que ouve à sua volta:
     ``alcançamos a meta, somos a meta, somos a natureza perfeita''.
 
-    Europeu orgulhoso do século \versal{XIX}, você está perdendo o juízo!
+    Europeu orgulhoso do século \textsc{xix}, você está perdendo o juízo!
     Seu saber não completa a natureza; ao contrário, mata-a. Meça, ao
     menos uma vez, sua altura como conhecedor com sua baixeza como
     realizador. Certamente galga os raios solares do conhecimento em
@@ -2244,7 +2244,7 @@ enigmas do devir, expressos no homem moderno como fruto mais maduro
     e nobre. Pereça por ele --- não conheço melhor finalidade da vida do
     que perecer na busca do grande e impossível, \emph{animae magna
     prodigus}.\footnote{``Pródigo de grande alma''\textbf{.} Expressão de
-      Horácio, \emph{Odes \versal{I}}, significando ``sem cuidado com a vida''.} Se, ao
+      Horácio, \emph{Odes \textsc{i}}, significando ``sem cuidado com a vida''.} Se, ao
     contrário, as doutrinas do devir soberano, da fluidez de todos os
     conceitos, tipos e espécies, da ausência de toda diferença cardinal
     entre homem e animal, doutrinas que tomo por verdadeiras mas letais
