--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -92,7 +92,7 @@ sua experiência no mundo), cabe saber até que ponto ela auxilia ou
 prejudica a vida, vista aqui não como um conceito biológico, mas como a
 experiência da vida humana, que só pode ser pensada no interior de uma
 cultura, como bem observaram Martin Heidegger\footnote{Heidegger, Martin. 
-\emph{Zur Auslegung von Nietzsches \versal{II}.} Unzeitgemässer Betrachtung. 
+\emph{Zur Auslegung von Nietzsches \textsc{ii}.} Unzeitgemässer Betrachtung. 
 Frankfurt am Main: Klostermann, 2005.} e Volker Gerhardt.\footnote{``Leben 
 und Geschichte. Menschliches Handeln und historischer Sinn in Nietzsches zweiter 
 `Unzeitgemäßer Betrachtung'''. In: \emph{Pathos und Distanz.} Studien zur
