arrumando créditos, fronte e rosto

--- a/2-creditos.tex
+++ b/2-creditos.tex
@@ -5,16 +5,16 @@
 \parindent=0cm
 \thispagestyle{empty}
 
-\textbf{copyright}\quad                      {}\\
+\textbf{copyright}\quad                      	  {}\\
 \textbf{edição brasileira©}\quad			      {Hedra \the\year}\\
-\textbf{tradução©}\quad			 			 {Fernando R. de Moraes Barros}\\
-\textbf{organização©}\quad			 		 {}\\
-\textbf{introdução©}\quad			 		 {Fernando R. de Moraes Barros}\\
+\textbf{tradução©}\quad			 			 {André Luís Mota Itaparica}\\
+\textbf{organização©}\quad			 		 {André Luís Mota Itaparica}\\
+\textbf{introdução©}\quad			 		 {André Luís Mota Itaparica}\\
 %\textbf{ilustração©}\quad			 		 {copyrightilustracao}\medskip
 
-\textbf{título original}\quad			 	 {Die Philosophie im tragischen Zeitalter der Griechen}\\
-\textbf{edição consultada}\quad			 {edicaoconsultada}\\
-\textbf{primeira edição}\quad			 	 {Hedra, 2008}\\
+\textbf{título original}\quad			 	 {\emph{Vom Nutzen und Nachteil der Historie für das Leben}}\\
+\textbf{edição consultada}\quad			 {\emph{Sämtliche Werke.} De Gruyter, 1988}\\
+\textbf{primeira edição}\quad			 	 {1874 editora?, [Hedra, 2014]}\\
 %\textbf{agradecimentos}\quad			 	 {agradecimentos}\\
 %\textbf{indicação}\quad			 	      {indicacao}\medskip
 
@@ -89,8 +89,18 @@ Foi feito o depósito legal.
 
 
 % CREDITOS ANTIGOS
-     %   \putline{Edição}{Jorge Sallum}
-%		\putline{Co-edição}{Alexandre B.~de Souza\\ e Bruno Costa}
-%		\putline{Capa e projeto gráfico}{Júlio Dui e Renan Costa Lima}
-% 		\putline{Imagem de capa}{Oásis de Terkezi, Chade/\textsc{nasa}}
-%		\putline{Programação em LaTeX}{Marcelo Freitas}
+%    \newcommand\copyrightlivro{Hedra}
+%\newcommand\copyrighttraducao{André Luís Mota Itaparica} % Copy de tradução
+%%\newcommand\copyrightorganizacao{}
+%%\newcommand\copyrightilustracao{}
+%%\newcommand\copyrightintroducao{}
+%\newcommand\titulooriginal{Vom Nutzen und Nachteil der Historie für das Leben}
+%\newcommand\edicaoconsultada{\emph{Sämtliche Werke.} De Gruyter, 1988}
+%\newcommand\primeiraedicao{1874}
+%%\newcommand\agradecimentos{}
+%%\newcommand\indicacao{}
+%\newcommand\ISBN{978-85-7715-545-3}
+%\newcommand\ano{2014}
+%\newcommand\edicao{Jorge Sallum}
+%\newcommand\coedicao{José Eduardo Góes}
+%\newcommand\assistencia{Equipe Hedra}
