--- a/INTRODUCAO.tex
+++ b/INTRODUCAO.tex
@@ -1,4 +1,8 @@
-\chapter{Introdução}{}{André Itaparica}\label{introduuxe7uxe3o}
+\chapter{Introdução}\label{introduuxe7uxe3o}
+
+\begin{flushright}
+\textsc{andré itaparica}
+\end{flushright}
 
 \hyphenation{Nietz-sche}
 
