--- a/TEXTO.tex
+++ b/TEXTO.tex
@@ -3,7 +3,6 @@
 \part{Sobre a utilidade e a desvantagem da história para a vida}
 
 
-
 \chapter{Prefácio}{}{}\label{prefuxe1cio}
 
 ``Aliás,\footnote{Esta tradução baseia-se na edição crítica
@@ -304,8 +303,8 @@ sobre os quais David Hume comentou com ironia:
 \begin{verse}
 \emph{And from the dregs of life hope to receive,}\\
 \emph{What the first sprightly running could not give.}\\
-E, do que sobrou no copo da vida,\qb{} esperam tomar\\
-Aquilo que o primeiro gole de vigor\qb{} não pôde dar.\footnote{Segundo
+E, do que sobrou no copo da vida, esperam tomar\\
+Aquilo que o primeiro gole de vigor não pôde dar.\footnote{Segundo
   Walter Kaufmann (\emph{Nietzsche} --- Philosopher, psychologist,
   antichrist. Princeton: Princeton University Press, 1974),
   citação da peça ``Aureng-zebe'', de John Dryden, incluída no
