--- a/PRETAS.tex
+++ b/PRETAS.tex
@@ -1,4 +1,6 @@
-\textbf{Friedrich Nietzsche} (Röcken, 1844---Weimar, 1900), filósofo 
+\vspace*{7cm}
+
+\noindent\textbf{Friedrich Nietzsche} (Röcken, 1844---Weimar, 1900), filósofo 
 e filólogo alemão, foi crítico mordaz da cultura ocidental 
 e um dos pensadores mais influentes da modernidade. Descendente de pastores 
 protestantes, opta no entanto por seguir carreira acadêmica. 
@@ -17,7 +19,7 @@ dentre as quais se destacam: \textit{O nascimento da tragédia} (1872),
 sintomas de problemas mentais, provavelmente decorrentes de sífilis. Falece em 1900.
 
 
-\textbf{Publicada em 1874}, a segunda das quatro considerações extemporâneas,
+\noindent\textbf{Publicada em 1874}, a segunda das quatro considerações extemporâneas,
 \textit{Sobre a utilidade e a desvantagem da história para a vida}, foi definida pelo autor, 
 em sua autobiografia, \textit{Ecce Homo}, como sendo o tratado que: ``traz à luz o que há 
 de perigoso, corrosivo e envenenador da vida na nossa forma de prática científica: a vida
