--- a/TEXTO.tex
+++ b/TEXTO.tex
@@ -3,7 +3,7 @@
 \part{Sobre a utilidade e a desvantagem da história para a vida}
 
 
-\chapter{Prefácio}{}{}\label{prefuxe1cio}
+\chapter*{Prefácio}{}{}\label{prefuxe1cio}
 
 ``Aliás,\footnote{Esta tradução baseia-se na edição crítica
   Colli-Montinari. \emph{Sämtliche Werke.} Kritische Studienausgabe. Bd.
@@ -76,7 +76,7 @@ que sentido teria a filologia clássica em nossos dias senão o de
 intervir extemporaneamente, isto é, contra a época, sobre a época e a
 favor de uma época futura.\label{epocafutura}
 
-\chapter{1}
+\chapter*{1}
 
 Observe o rebanho a pastar: ele nada sabe do que é o ontem e o hoje;
 saltita aqui e acolá, come, descansa, digere, novamente saltita, noite e
@@ -397,7 +397,7 @@ preocupações no que diz respeito à saúde de um homem, de um povo, de uma
 cultura. Pois o excesso de história destrói e degenera a vida,
 degenerando, por fim, a própria história.
 
-\chapter{2}\label{capuxedtulo-2}
+\chapter*{2}\label{capuxedtulo-2}
 
 Que a vida precisa do serviço da história é algo que deve ser entendido
 com tanta clareza quanto esta sentença, que posteriormente deverá ser
@@ -612,7 +612,7 @@ sem necessidade, o antiquário sem piedade, o conhecedor do grandioso sem
 a capacidade do grandioso são tais plantas degeneradas, que se alastram
 como ervas daninhas quando afastadas de seus solos naturais.
 
-\chapter{3}\label{capuxedtulo-3}
+\chapter*{3}\label{capuxedtulo-3}
 
 Em segundo lugar, a história também pertence ao conservador e reverente que, 
 com fidelidade e amor, olha para trás, de onde veio e de
@@ -787,7 +787,7 @@ crítica, um consolo suspeito: saber que aquela primeira natureza já foi
 uma vez uma segunda natureza e que aquela segunda natureza vitoriosa se
 tornará uma primeira.
 
-  \chapter{4}\label{capuxedtulo-4}
+  \chapter*{4}\label{capuxedtulo-4}
 
     Esses são os serviços que a história pode prestar à vida; todo homem
     e todo povo precisam, segundo seus objetivos, forças e necessidades,
@@ -1027,7 +1027,7 @@ tornará uma primeira.
     contradição entre forma e conteúdo, entre interioridade e
     convenção}.
 
-  \chapter{5}\label{capítulo-5}
+  \chapter*{5}\label{capítulo-5}
 
 
 A saturação de uma época com a história me parece ser adversa e perigosa,
@@ -1240,7 +1240,7 @@ falta de medida de sua efusão crítica, nessa ausência de domínio sobre
 si mesmos, que os romanos chamavam \emph{impotentia}, revela-se a
 fraqueza da personalidade moderna.
 
-\chapter{6}\label{capuxedtulo-6}
+\chapter*{6}\label{capuxedtulo-6}
 
 Mas deixemos de lado essa fraqueza. Façamos uma questão incômoda a uma
 notória força do homem moderno: tem ele o direito de se designar, pela
@@ -1531,7 +1531,7 @@ heróis. Com uma centena de homens educados dessa maneira antimoderna,
 isto é, maduros e habituados ao heroico, pode-se calar toda a cultura
 baixa e barulhenta desta época.
 
-\chapter{7}\label{capuxedtulo-7}
+\chapter*{7}\label{capuxedtulo-7}
 
 O sentido histórico, quando reina \emph{de forma incontrolada} e extrai
 todas as suas consequências, extingue o futuro, pois destrói as ilusões
@@ -1728,7 +1728,7 @@ ao estranho e mesmo ao próprio bem. Se o chão ainda nos suportar! E se
 ele não mais nos suportar, tudo bem --- assim eles sentem e vivem uma
 existência \emph{irônica}.
 
-\chapter{8}\label{capuxedtulo-8}
+\chapter*{8}\label{capuxedtulo-8}
 
 Embora possa parecer estranho, não é contudo contraditório quando
 atribuo, a uma época que costuma manifestar-se de forma tão gritante e
@@ -1999,7 +1999,7 @@ leva insistentemente adiante: e se eles mesmo nascerem como rebentos
 tardios --- existe uma maneira de esquecer isso; as gerações futuras só
 os conhecerão como primogênitos.
 
-\chapter{9}\label{capuxedtulo-9}
+\chapter*{9}\label{capuxedtulo-9}
 
 Talvez seja nossa época esse primogênito? --- De fato, a veemência de
 seu sentido histórico é tão grande, sua expressão, tão universal e
@@ -2388,7 +2388,7 @@ sem olhos, sem dentes, sem paladar, sem nada.\footnote{Shakespeare,
   se redimisse desses homens e idosos. Aí então adviria o reino da
   juventude!
 
-\chapter{10}\label{capuxedtulo-10}
+\chapter*{10}\label{capuxedtulo-10}
 
 Neste momento, pensando na \emph{juventude}, eu brado: terra à
     vista! Terra à vista! Satisfeito e mais que satisfeito desta viagem
