--- a/TEXTO.tex
+++ b/TEXTO.tex
@@ -303,6 +303,9 @@ sobre os quais David Hume comentou com ironia:
 \begin{verse}
 \emph{And from the dregs of life hope to receive,}\\
 \emph{What the first sprightly running could not give.}\\
+
+\bigskip
+
 E, do que sobrou no copo da vida, esperam tomar\\
 Aquilo que o primeiro gole de vigor não pôde dar.\footnote{Segundo
   Walter Kaufmann (\emph{Nietzsche} --- Philosopher, psychologist,
@@ -1145,11 +1148,11 @@ Certa vez, Goethe disse de Shakespeare:\footnote{Ensaio ``Shakespeare und
   kein Ende'' (Shakespeare para sempre), de Goethe.} 
 
 \begin{quote}
-``Ninguém desprezou o figurino material tanto quanto ele; pois conhecia muito bem
+Ninguém desprezou o figurino material tanto quanto ele; pois conhecia muito bem
 o figurino humano interior, e neste todos são iguais. Diz-se que ele
 representou os romanos perfeitamente; não acho isso; eles nada mais são
 que ingleses encarnados, mas certamente são homens, fundamentalmente
-homens, e também as togas romanas lhes caem bem.'' 
+homens, e também as togas romanas lhes caem bem. 
 \end{quote}
 
 Agora eu pergunto se
