--- a/2-creditos.tex
+++ b/2-creditos.tex
@@ -13,19 +13,20 @@
 %\textbf{ilustração©}\quad			 		 {copyrightilustracao}\medskip
 
 \textbf{título original}\quad			 	 {\emph{Vom Nutzen und Nachteil der Historie für das Leben}}\\
-\textbf{edição consultada}\quad			 {\emph{Sämtliche Werke.} De Gruyter, 1988}\\
+\textbf{edição consultada}\quad			     {\emph{Sämtliche Werke.} De Gruyter, 1988}\\
 \textbf{primeira edição}\quad			 	 {1874 editora?, [Hedra, 2014]}\\
 %\textbf{agradecimentos}\quad			 	 {agradecimentos}\\
 %\textbf{indicação}\quad			 	      {indicacao}\medskip
 
 \textbf{edição}\quad			 			 {Jorge Sallum}\\
-\textbf{coedição}\quad			 			 {Suzana Salama}\\
+\textbf{coedição}\quad			 			 {José Eduardo Góes}\\
+\textbf{editor assistente}\quad				 {Paulo Pompermaier}\\	
 \textbf{assistência editorial}\quad			 {Julia Murachovsky}\\
 \textbf{revisão}\quad			 			 {}\\
-\textbf{preparação}\quad			 		      {preparacao}\\
-\textbf{iconografia}\quad			 		 {iconografia}\\
-\textbf{capa}\quad			 				 {}\\
-\textbf{imagem da capa}\quad			 	     {imagemcapa}\medskip
+%\textbf{preparação}\quad			 		      {preparacao}\\
+%\textbf{iconografia}\quad			 		 {iconografia}\\
+\textbf{capa}\quad			 				 {Lucas Kröeff}\\
+%\textbf{imagem da capa}\quad			 	     {imagemcapa}\medskip
 
 \textbf{ISBN}\quad			 				 {ISBN}\smallskip
 
@@ -86,21 +87,3 @@ Foi feito o depósito legal.
 
 \endgroup
 \pagebreak
-
-
-% CREDITOS ANTIGOS
-%    \newcommand\copyrightlivro{Hedra}
-%\newcommand\copyrighttraducao{André Luís Mota Itaparica} % Copy de tradução
-%%\newcommand\copyrightorganizacao{}
-%%\newcommand\copyrightilustracao{}
-%%\newcommand\copyrightintroducao{}
-%\newcommand\titulooriginal{Vom Nutzen und Nachteil der Historie für das Leben}
-%\newcommand\edicaoconsultada{\emph{Sämtliche Werke.} De Gruyter, 1988}
-%\newcommand\primeiraedicao{1874}
-%%\newcommand\agradecimentos{}
-%%\newcommand\indicacao{}
-%\newcommand\ISBN{978-85-7715-545-3}
-%\newcommand\ano{2014}
-%\newcommand\edicao{Jorge Sallum}
-%\newcommand\coedicao{José Eduardo Góes}
-%\newcommand\assistencia{Equipe Hedra}
