--- a/2-creditos.tex
+++ b/2-creditos.tex
@@ -14,7 +14,7 @@
 
 \textbf{título original}\quad			 	 {\emph{Vom Nutzen und Nachteil der Historie für das Leben}}\\
 \textbf{edição consultada}\quad			     {\emph{Sämtliche Werke.} De Gruyter, 1988}\\
-\textbf{primeira edição}\quad			 	 {1874 editora?, [Hedra, 2014]}\\
+\textbf{primeira edição}\quad			 	 {editora?, 1874 [Hedra, 2014]}\\
 %\textbf{agradecimentos}\quad			 	 {agradecimentos}\\
 %\textbf{indicação}\quad			 	      {indicacao}\medskip
 
@@ -22,11 +22,11 @@
 \textbf{coedição}\quad			 			 {José Eduardo Góes}\\
 \textbf{editor assistente}\quad				 {Paulo Pompermaier}\\	
 \textbf{assistência editorial}\quad			 {Julia Murachovsky}\\
-\textbf{revisão}\quad			 			 {}\\
-%\textbf{preparação}\quad			 		      {preparacao}\\
+%\textbf{revisão}\quad			 			 {}\\
+%\textbf{preparação}\quad			 		 {preparacao}\\
 %\textbf{iconografia}\quad			 		 {iconografia}\\
 \textbf{capa}\quad			 				 {Lucas Kröeff}\\
-%\textbf{imagem da capa}\quad			 	     {imagemcapa}\medskip
+%\textbf{imagem da capa}\quad			 	 {imagemcapa}\medskip
 
 \textbf{ISBN}\quad			 				 {ISBN}\smallskip
 
